compiler/src/test/resources/amyc/parser/failing/UnaryWithinUnary.amy
module Unary
  --x
end Unary
